refactor: :recycle: streamline feed from arduino

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <script>
     const $messages = document.getElementById('messages');
     const newItem = (content) => {
-            const item = document.createElement('span');
+            const item = document.createElement('p');
             item.innerText = content;
             return item;
         };
